--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,9 @@
 AUTOMAKE_OPTIONS = foreign
 ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I ../m4
 
-AM_CPPFLAGS = $(CPPFLAGS) -D_GNU_SOURCE -I ../include $(LIBNETIFYD_CFLAGS)
+AM_CPPFLAGS = $(CPPFLAGS) -D_GNU_SOURCE -I ../include $(LIBNETIFYD_CFLAGS) $(LIBCURL_CFLAGS)
 
 lib_LTLIBRARIES = libnetify-sink-post.la
 
 libnetify_sink_post_la_SOURCES = nsp-plugin.cpp
+libnetify_sink_post_la_LIBADD = $(LIBNETIFYD_LIBS) $(LIBCURL_LIBS)
