--- a/deploy/debian/control.in
+++ b/deploy/debian/control.in
@@ -2,7 +2,7 @@ Source: @PACKAGE_TARNAME@
 Section: net
 Priority: optional
 Maintainer: Darryl Sokoloski <darryl@egloo.ca>
-Build-Depends: debhelper (>= 9), autoconf, automake, bc, build-essential, libtool, netifyd-dev (>= @NETIFY_MINVER@)
+Build-Depends: debhelper (>= 9), autoconf, automake, bc, build-essential, libtool, libcurl4-openssl-dev, netifyd-dev (>= @NETIFY_MINVER@)
 
 Package: @PACKAGE_TARNAME@
 Architecture: any
