--- a/.gitlab-ci/build-templates.yml
+++ b/.gitlab-ci/build-templates.yml
@@ -7,7 +7,7 @@
   script:
     # Build environment
     - apt update
-    - env DEBIAN_FRONTEND=noninteractive apt install -y rsync debhelper autoconf automake bc build-essential libtool wget pkg-config git
+    - env DEBIAN_FRONTEND=noninteractive apt install -y rsync debhelper autoconf automake bc build-essential libtool wget pkg-config git libcurl4-openssl-dev
     - wget --no-check-certificate https://download.netify.ai/netify/$OS_NAME/$OS_VERSION-devel/$OS_ARCH_PATH/netifyd_${NETIFY_MINVER}_${OS_ARCH}.deb
     - wget --no-check-certificate https://download.netify.ai/netify/$OS_NAME/$OS_VERSION-devel/$OS_ARCH_PATH/netifyd-dev_${NETIFY_MINVER}_${OS_ARCH}.deb
     - env DEBIAN_FRONTEND=noninteractive apt install -y ./netifyd_${NETIFY_MINVER}_${OS_ARCH}.deb ./netifyd-dev_${NETIFY_MINVER}_${OS_ARCH}.deb
@@ -38,7 +38,7 @@
   image: $RPMOS_IMAGE
   script:
     # Build environment
-    - yum -y install make rpm-build which expect yum-utils sudo autoconf gcc gcc-c++ automake libtool rsync bc git wget
+    - yum -y install make rpm-build which expect yum-utils sudo autoconf gcc gcc-c++ automake libtool rsync bc git wget curl-devel
     - wget --no-check-certificate https://download.netify.ai/netify/$RPMOS_OS/$RPMOS_VERSION/devel/$RPMOS_ARCH/netifyd-${NETIFY_MINVER}.os${RPMOS_VERSION}.x86_64.rpm
     - wget --no-check-certificate https://download.netify.ai/netify/$RPMOS_OS/$RPMOS_VERSION/devel/$RPMOS_ARCH/netifyd-devel-${NETIFY_MINVER}.os${RPMOS_VERSION}.x86_64.rpm
     - yum -y localinstall $RPMOS_REPOS netifyd*.rpm
