--- a/deploy/debian/rules.in
+++ b/deploy/debian/rules.in
@@ -1,12 +1,12 @@
 #!/usr/bin/make -f
 
-export DESTDIR=debian/netify-sink-post
+export DESTDIR=debian/$(PACKAGE_TARNAME)
 
 %:
 	dh $@
 
 override_dh_install:
 	dh_auto_install
-	rm -rf debian/netify-sink-post/usr/share/doc
-	rm -f debian/netify-sink-post/usr/lib/*/*.a
-	rm -f debian/netify-sink-post/usr/lib/*/*.la
+	rm -rf debian/$(PACKAGE_TARNAME)/usr/share/doc
+	rm -f debian/$(PACKAGE_TARNAME)/usr/lib/*/*.a
+	rm -f debian/$(PACKAGE_TARNAME)/usr/lib/*/*.la
