--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I ../m4
 
 AM_CPPFLAGS = $(CPPFLAGS) -D_GNU_SOURCE -I ../include $(LIBNETIFYD_CFLAGS) $(LIBCURL_CFLAGS)
 
-lib_LTLIBRARIES = libnetify-sink-post.la
+lib_LTLIBRARIES = libnetify-sink-http.la
 
-libnetify_sink_post_la_SOURCES = nsp-plugin.cpp
-libnetify_sink_post_la_LIBADD = $(LIBNETIFYD_LIBS) $(LIBCURL_LIBS)
+libnetify_sink_http_la_SOURCES = nsp-plugin.cpp
+libnetify_sink_http_la_LIBADD = $(LIBNETIFYD_LIBS) $(LIBCURL_LIBS)
