--- a/deploy/rpm/netify-sink-http.spec.in
+++ b/deploy/rpm/netify-sink-http.spec.in
@@ -38,6 +38,7 @@ make %{?_smp_mflags}
 make install DESTDIR=$RPM_BUILD_ROOT
 rm -f ${RPM_BUILD_ROOT}/%{_libdir}/lib*.a
 rm -f ${RPM_BUILD_ROOT}/%{_libdir}/lib*.la
+rm -rf ${RPM_BUILD_ROOT}/usr/local
 
 # Clean-up
 %clean
@@ -55,5 +56,6 @@ rm -f ${RPM_BUILD_ROOT}/%{_libdir}/lib*.la
 %files
 %defattr(-,root,root)
 %{_libdir}/lib*.so*
-%config(noreplace) /etc/netify.d/@PACKAGE_TARNAME@.json
+%config(noreplace) /etc/netifyd/@PACKAGE_TARNAME@.json
+%config(noreplace) /etc/netifyd/plugins.d/10-@PACKAGE_TARNAME@.conf
 
