Added missing dbg package control entries.

--- a/deploy/debian/control.in
+++ b/deploy/debian/control.in
@@ -10,3 +10,14 @@ Depends: ${misc:Depends}, ${shlibs:Depends}, netifyd (>= @NETIFY_MINVER@)
 Description: Netify HTTP POST Sink Plugin
  This plugin uploads Netify Agent statistics to a HTTP server.
  Report bugs to: @PACKAGE_BUGREPORT@
+
+Package: @PACKAGE_TARNAME@-dbg
+Architecture: any
+Section: debug
+Priority: extra
+Depends:
+    @PACKAGE_TARNAME@ (= ${binary:Version}),
+    ${misc:Depends}
+Description: Debugging symbols for @PACKAGE_TARNAME@
+ This plugin uploads Netify Agent statistics to a HTTP server.
+ Report bugs to: @PACKAGE_BUGREPORT@
