Specify full library path.

--- a/deploy/plugins.d/10-netify-sink-http.conf.in
+++ b/deploy/plugins.d/10-netify-sink-http.conf.in
@@ -7,7 +7,7 @@
 
 [sink-http]
 enable = no
-plugin_library = @libdir@/lib@PACKAGE_TARNAME@.so
+plugin_library = @libdir@/lib@PACKAGE_TARNAME@.so.0.0.0
 conf_filename = ${path_state_persistent}/@PACKAGE_TARNAME@.json
 
 # vim: set ft=dosini :
