--- a/deploy/Makefile.am
+++ b/deploy/Makefile.am
@@ -1,4 +1,4 @@
-# Netify HTTP POST Sink Plugin Automake File
+# Netify HTTP Sink Plugin Automake File
 # Copyright (C) 2016-2023 eGloo Incorporated
 #
 # This is free software, licensed under the GNU General Public License v3.
