--- a/deploy/plugins.d/10-netify-sink-http.conf.in
+++ b/deploy/plugins.d/10-netify-sink-http.conf.in
@@ -1,4 +1,4 @@
-# Netify Agent HTTP POST Sink Plugin Loader
+# Netify Agent HTTP Sink Plugin Loader
 # Copyright (C) 2023 eGloo Incorporated
 #
 # This is free software, licensed under the GNU General Public License v3.
