--- a/deploy/openwrt/Makefile.in
+++ b/deploy/openwrt/Makefile.in
@@ -25,7 +25,7 @@ include $(INCLUDE_DIR)/package.mk
 define Package/@PACKAGE_TARNAME@
   SECTION:=libs
   CATEGORY:=Libraries
-  TITLE:=Netify Agent HTTP POST Sink Plugin
+  TITLE:=Netify Agent HTTP Sink Plugin
   URL:=http://www.netify.ai/
   DEPENDS:=+netifyd @!USE_UCLIBC
   # Explicitly depend on libstdcpp rather than $(CXX_DEPENDS).  At the moment
