Updated for Agent v4.5.23.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-*.gz
-/Makefile.in
-Makefile
 aclocal.m4
 autom4te.cache/
 compile
+compile_flags.txt
 config.guess
 config.h
 config.h.in
@@ -13,13 +11,16 @@ config.status
 config.sub
 configure
 depcomp
+*.gz
 install-sh
 libtool
 ltmain.sh
 m4/libtool.m4
+m4/lt~obsolete.m4
 m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
-m4/lt~obsolete.m4
+Makefile
+/Makefile.in
 missing
 stamp-h1
