Various FreeBSD fixes.

--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,7 @@ AC_CONFIG_SRCDIR([src/nsp-plugin.cpp])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AC_USE_SYSTEM_EXTENSIONS
+AC_CANONICAL_HOST
 
 # Set the minimum Agent version this plugin requires.
 # When updating this version, remember to update .gitlab-ci.yml too.
@@ -37,14 +38,15 @@ AS_IF([test "x$ac_cv_path_uuidgen" != "xfalse"], [
 AC_DEFINE_UNQUOTED(NSP_BUILD_UUID, "${BUILD_UUID}", [Build UUID])
 
 # Check compiler flags (gnu++11)
-AX_CXX_COMPILE_STDCXX_11([ext], [optional])
-AS_IF([test "$HAVE_CXX11" = "0"], [AX_CXX_COMPILE_STDCXX_0X])
+AX_CXX_COMPILE_STDCXX_11
+AS_VAR_APPEND([CXXFLAGS], [" -std=gnu++11"])
 
 # Checks for packages.
+PKG_CHECK_MODULES([LIBCURL], [libcurl])
 PKG_CHECK_MODULES([LIBNETIFYD], [libnetifyd >= $NETIFY_MINVER],
     [ac_persistentstatedir=`$PKG_CONFIG --variable=persistentstatedir libnetifyd`;\
      ac_volatilestatedir=`$PKG_CONFIG --variable=volatilestatedir libnetifyd`],
-    [ac_persistentstatedir=;ac_volatilestatedir=;]
+    [AC_MSG_ERROR([Netify Agent pkg-config not found])]
 )
 
 AS_IF([test "x$ac_persistentstatedir" = "x"],
@@ -56,8 +58,6 @@ AS_IF([test "x$ac_volatilestatedir" = "x"],
     AC_MSG_ERROR([couldn't determine Netify Agent's volatile state directory]),
     AC_SUBST(volatilestatedir, $ac_volatilestatedir)
 )
-
-PKG_CHECK_MODULES([LIBCURL], [libcurl])
 
 # Checks for header files.
 
@@ -73,10 +73,17 @@ AC_TYPE_SIZE_T
 if test -e ".git"; then :
     GIT_TAG=`git log -1 --format=%h`
     GIT_DATE=`git log -1 --format=%cd`
-    GIT_DATE_ISO8601=`git log -1 --format=%ci`
+    GIT_DATE_UNIX=`git log -1 --format=%ct`
 
     GIT_LAST_COMMIT_HASH=`git log -1 --format=%H`
-    GIT_LAST_COMMIT_DATE=`date -d "${GIT_DATE_ISO8601}" '+%F'`
+    case "${host_os}" in
+        linux*)
+            GIT_LAST_COMMIT_DATE=`date -d "@${GIT_DATE_UNIX}" '+%F'`
+        ;;
+    *)
+            GIT_LAST_COMMIT_DATE=`date -r "${GIT_DATE_UNIX}" '+%F'`
+        ;;
+    esac
 
     AC_SUBST([GIT_LAST_COMMIT_HASH], [$GIT_LAST_COMMIT_HASH])
     AC_SUBST([GIT_LAST_COMMIT_DATE], [$GIT_LAST_COMMIT_DATE])
