--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,93 +1,169 @@
-# -------------------------------------------------------------------------
+# -----------------------------------------------------------
 # Definitions
-# -------------------------------------------------------------------------
+# -----------------------------------------------------------
 
 stages:
-  - build
+  - Build
+  - Variants
 
-# Incude templates
 include:
-  - '/.gitlab-ci/build-templates.yml'
+  - project: "netify.ai/public/netify-development-support/\
+              netify-ci-templates"
+    ref: master
+    file:
+      - /gitlab/plugins/global-variables.yml
+      - /gitlab/plugins/common-base-packages.yml
+      - /gitlab/plugins/debian-base-packages.yml
+      - /gitlab/plugins/rhel-base-packages.yml
+      - /gitlab/plugins/build-templates.yml
+      - /gitlab/common/variants-templates.yml
 
 variables:
+  PACKAGE_NAME: netify-sink-http
   NETIFY_MINVER: "4.5.24-1"
+  GIT_SUBMODULE_STRATEGY: recursive
+  EXTRA_PACKAGES_APT: >
+    libcurl4-openssl-dev
+    libmnl-dev
+    libnetfilter-conntrack-dev
+  EXTRA_PACKAGES_YUM: >
+    curl-devel
+    libmnl-devel
+    libnetfilter_conntrack-devel
 
-# -------------------------------------------------------------------------
-# Build stage
-# -------------------------------------------------------------------------
+# -----------------------------------------------------------
+# Build
+# -----------------------------------------------------------
 
-# Debian OS Targets
-#------------------
+# Debian Targets
 
-debian 10 build:
+Debian/10/x86-64:
   extends: .debian_build
   tags:
     - docker
   variables:
-    OS_IMAGE: "debian:10"
     OS_NAME: "debian"
     OS_VERSION: "10"
+    OS_IMAGE: "debian:10"
     OS_ARCH: "amd64"
-    OS_ARCH_PATH: "amd64"
+    OS_ARCH_PATH:
+      value: $OS_ARCH
+      expand: true
+    OS_EXTRA_PACKAGES:
+      value: $EXTRA_PACKAGES_APT
+      expand: true
 
-debian 11 build:
+Debian/11/x86-64:
   extends: .debian_build
   tags:
     - docker
   variables:
-    OS_IMAGE: "debian:11"
     OS_NAME: "debian"
     OS_VERSION: "11"
+    OS_IMAGE: "debian:11"
     OS_ARCH: "amd64"
-    OS_ARCH_PATH: "amd64"
+    OS_ARCH_PATH:
+      value: $OS_ARCH
+      expand: true
+    OS_EXTRA_PACKAGES:
+      value: $EXTRA_PACKAGES_APT
+      expand: true
 
-# Ubuntu OS Targets
-#------------------
+# Ubuntu Targets
 
-ubuntu 20.04 build:
+Ubuntu/20.04/x86-64:
   extends: .debian_build
   tags:
     - docker
   variables:
-    OS_IMAGE: "ubuntu:20.04"
     OS_NAME: "ubuntu"
     OS_VERSION: "focal"
+    OS_IMAGE: "ubuntu:20.04"
     OS_ARCH: "amd64"
-    OS_ARCH_PATH: "binary-amd64"
+    OS_ARCH_PATH:
+      value: "binary-$OS_ARCH"
+      expand: true
+    OS_EXTRA_PACKAGES:
+      value: $EXTRA_PACKAGES_APT
+      expand: true
 
-ubuntu 22.04 build:
+Ubuntu/22.04/x86-64:
   extends: .debian_build
   tags:
     - docker
   variables:
-    OS_IMAGE: "ubuntu:22.04"
     OS_NAME: "ubuntu"
     OS_VERSION: "jammy"
+    OS_IMAGE: "ubuntu:22.04"
     OS_ARCH: "amd64"
-    OS_ARCH_PATH: "binary-amd64"
+    OS_ARCH_PATH:
+      value: "binary-$OS_ARCH"
+      expand: true
+    OS_EXTRA_PACKAGES:
+      value: $EXTRA_PACKAGES_APT
+      expand: true
 
-# RPM OS Targets
-#---------------
+# RedHat Targets
 
-centos 7 build:
+CentOS/7/x86-64:
   extends: .rpmos_build
   tags:
     - docker
   variables:
-    RPMOS_IMAGE: "centos:7.9.2009"
-    RPMOS_OS: "centos"
-    RPMOS_VERSION: "7"
-    RPMOS_ARCH: "x86_64"
-    RPMOS_REPOS: ""
+    OS_NAME: "centos"
+    OS_VERSION: "7"
+    OS_IMAGE: "centos:7.9.2009"
+    OS_ARCH: "x86_64"
+    OS_REPOS: ""
+    OS_EXTRA_PACKAGES:
+      value: $EXTRA_PACKAGES_YUM
+      expand: true
 
-almalinux 8 build:
+Rocky Linux/8/x86-64:
   extends: .rpmos_build
   tags:
     - docker
   variables:
-    RPMOS_IMAGE: "almalinux:8"
-    RPMOS_OS: "almalinux"
-    RPMOS_VERSION: "8"
-    RPMOS_ARCH: "x86_64"
-    RPMOS_REPOS: "--enablerepo=powertools"
+    OS_NAME: "rockylinux"
+    OS_VERSION: "8"
+    OS_IMAGE: "rockylinux:8"
+    OS_ARCH: "x86_64"
+    OS_REPOS: "--enablerepo=powertools,epel"
+    OS_EXTRA_PACKAGES:
+      value: $EXTRA_PACKAGES_YUM
+      expand: true
 
+AlmaLinux/8/x86-64:
+  extends: .rpmos_build
+  tags:
+    - docker
+  variables:
+    OS_NAME: "almalinux"
+    OS_VERSION: "8"
+    OS_IMAGE: "almalinux:8"
+    OS_ARCH: "x86_64"
+    OS_REPOS: "--enablerepo=powertools,epel"
+    OS_EXTRA_PACKAGES:
+      value: $EXTRA_PACKAGES_YUM
+      expand: true
+
+# -----------------------------------------------------------
+# Variants
+# -----------------------------------------------------------
+
+# Source Code Archive
+
+Source Archive:
+  extends: .pkg_source
+  tags:
+    - docker
+  needs:
+    - Debian/11/x86-64
+  variables:
+    OS_NAME: "debian"
+    OS_VERSION: "11"
+    OS_IMAGE: "debian:11"
+    OS_ARCH: "amd64"
+    OS_EXTRA_PACKAGES:
+      value: $EXTRA_PACKAGES_APT
+      expand: true
