Fixed build UUID define name.

--- a/configure.ac
+++ b/configure.ac
@@ -31,7 +31,7 @@ AX_CHECK_PROGS
 
 # Generate a random build UUID
 AX_BUILD_UUID
-AC_DEFINE_UNQUOTED(NPP_BUILD_UUID, "${BUILD_UUID}", [Build UUID])
+AC_DEFINE_UNQUOTED(NSP_BUILD_UUID, "${BUILD_UUID}", [Build UUID])
 
 # Check compiler flags (gnu++11)
 AX_CXX_COMPILE_STDCXX_11
