--- a/deploy/freebsd/Makefile.in
+++ b/deploy/freebsd/Makefile.in
@@ -1,10 +1,11 @@
+# Created by: Darryl Sokoloski <darryl@egloo.ca>
 # $FreeBSD$
 
 PORTNAME=@PACKAGE_TARNAME@
 PORTVERSION=@PACKAGE_VERSION@
 PORTEPOCH=1
 CATEGORIES=security
-MAINTAINER=team@netify.ai
+MAINTAINER=darryl@egloo.ca
 COMMENT=Netify HTTP Sink Plugin for the Netify Agent
 WWW=https://netify.ai/
 MASTER_SITES=http://download.netify.ai/netify/source/
