--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,10 @@ include:
       - /gitlab/common/variants-templates.yml
 
 variables:
-  NETIFY_MINVER: "5.0.1-1"
+  NETIFY_MINVER: "5.0.1"
+  NETIFY_VERREL:
+    value: ${NETIFY_MINVER}-1
+    expand: true
   GIT_SUBMODULE_STRATEGY: recursive
   EXTRA_PACKAGES_APT: >
     libcurl4-openssl-dev
