Fixed Agent minimum version to v5.0.4.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ include:
       - /gitlab/common/variants-templates.yml
 
 variables:
-  NETIFY_MINVER: "5.0.4-1"
+  NETIFY_MINVER: "5.0.4"
   NETIFY_VERREL:
     value: ${NETIFY_MINVER}-1
     expand: true
